# yadro-simulation-task

./: CMakeLists.txt  README.md
src/: event_parser.cpp  event_parser.h  events.cpp  events.h  main.cpp  state-utils.cpp  state-utils.h
tests/: parser-tests.cpp
tests/samples/: 1.txt  incorrect1.txt  incorrect2.txt  incorrect3.txt  incorrect4.txt
